--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
   pointer-events: none;
 }
 
+
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -27,6 +30,24 @@
 .App-link {
   color: #61dafb;
 }
+
+.player-wrapper {
+  position: relative;
+  padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
+}
+
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
+
+div.lac  {
+  margin-top: 0%;
+}
+
 
 @keyframes App-logo-spin {
   from {
