--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
 .player-wrapper {
   position: relative;
   padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
+  margin-bottom: 0%;
 }
 
 .react-player {
